--- a/src/app/components/add-card/add-card.component.html
+++ b/src/app/components/add-card/add-card.component.html
@@ -2,7 +2,7 @@
 <app-navbar></app-navbar>
 
 <!---->
-<div class="row" *ngIf="cards.length" >
+<div class="row">
   <div class="col s6 m3 xl13">
     <div class="card hoverable addCard">
       <div class="addText">
